--- a/javascript-compressor/shrinksafe-compressor/pom.xml
+++ b/javascript-compressor/shrinksafe-compressor/pom.xml
@@ -47,9 +47,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.dojotoolkit</groupId>
-      <artifactId>custom_rhino</artifactId>
-      <version>0.9.0</version>
+      <groupId>rhino</groupId>
+      <artifactId>js</artifactId>
+      <version>1.7R1</version>
     </dependency>
 
     <dependency>
@@ -58,6 +58,11 @@
       <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
   </dependencies>
 
 </project>
