--- a/javascript-compressor/shrinksafe-compressor/pom.xml
+++ b/javascript-compressor/shrinksafe-compressor/pom.xml
@@ -56,6 +56,7 @@
       <groupId>org.codehaus.mojo.javascript</groupId>
       <artifactId>javascript-compressor-api</artifactId>
       <version>${project.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
