--- a/javascript-compressor/yahooui-compressor/pom.xml
+++ b/javascript-compressor/yahooui-compressor/pom.xml
@@ -49,13 +49,14 @@
     <dependency>
       <groupId>com.yahoo.platform.yui</groupId>
       <artifactId>yuicompressor</artifactId>
-      <version>2.2.5</version>
+      <version>2.4.2</version>
     </dependency>
 
     <dependency>
       <groupId>org.codehaus.mojo.javascript</groupId>
       <artifactId>javascript-compressor-api</artifactId>
       <version>${project.version}</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
