--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,21 @@
         <artifactId>plexus-utils</artifactId>
         <version>1.5.9</version>
       </dependency>
+      <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-plugin-api</artifactId>
+         <version>2.0</version>
+       </dependency>
+       <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-project</artifactId>
+         <version>2.2.1</version>
+       </dependency>
+       <dependency>
+         <groupId>org.apache.maven</groupId>
+         <artifactId>maven-artifact</artifactId>
+         <version>2.2.1</version>
+       </dependency>      
     </dependencies>
   </dependencyManagement>
   <build>
