--- a/javascript-maven-plugin/pom.xml
+++ b/javascript-maven-plugin/pom.xml
@@ -40,6 +40,12 @@
   <name>Javascript Maven Plugin</name>
   <url>http://mojo.codehaus.org/javascript-maven-tools/javascript-maven-plugin/</url>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <powermock.version>1.4</powermock.version>
+    <jasmine.version>1.0.1</jasmine.version>
+  </properties>
+  
   <build>
     <defaultGoal>install</defaultGoal>
     <plugins>
@@ -65,16 +71,23 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+					<goalPrefix>javascript</goalPrefix>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generated-helpmojo</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+					</execution>
+				</executions>
+      </plugin>      
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-plugin-plugin</artifactId>
-          <version>2.5</version>
-        </plugin>      
-      </plugins>
-    </pluginManagement>
   </build>
 
   <profiles>
@@ -149,6 +162,7 @@
 
 
   <dependencies>
+    <!-- Mojo Dependencies -->
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
@@ -157,17 +171,31 @@
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
-      <version>2.0</version>
+      <version>2.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
+      <version>2.2.1</version>
+    </dependency>
+
+    <!-- Plugin Dependencies -->    
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.4</version>
     </dependency>
     <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
+    <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
-    </dependency>    
+    </dependency>
+
+    <!-- Javascript Maven Tools dependencies -->
     <dependency>
       <groupId>org.codehaus.mojo.javascript</groupId>
       <artifactId>javascript-maven-archive</artifactId>
@@ -182,11 +210,13 @@
       <groupId>org.codehaus.mojo.javascript</groupId>
       <artifactId>yahooui-compressor</artifactId>
       <version>${project.version}</version>
-    </dependency>	
+    </dependency>
+
+    
     <dependency>
       <groupId>commons-jxpath</groupId>
       <artifactId>commons-jxpath</artifactId>
-      <version>1.2</version>
+      <version>1.3</version>
       <exclusions>
         <exclusion>
           <groupId>javax.servlet</groupId>
@@ -232,6 +262,98 @@
       <version>1.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>net.sourceforge.htmlunit</groupId>
+      <artifactId>htmlunit</artifactId>
+      <version>2.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>stringtemplate</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
+    <!-- Jasmine & its Dependencies -->
+    <dependency>
+      <groupId>com.pivotallabs</groupId>
+      <artifactId>jasmine</artifactId>
+      <version>${jasmine.version}</version>
+      <type>js</type>
+    </dependency>
+    <dependency>
+      <groupId>com.pivotallabs</groupId>
+      <artifactId>jasmine-css</artifactId>
+      <version>${jasmine.version}</version>
+      <type>css</type>
+    </dependency>
+    <dependency>
+      <groupId>com.pivotallabs</groupId>
+      <artifactId>jasmine-html</artifactId>
+      <version>${jasmine.version}</version>
+      <type>js</type>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json2</artifactId>
+      <version>2010-03-20</version>
+      <type>js</type>
+    </dependency>
+    <dependency>
+      <groupId>com.jaredgrippe</groupId>
+      <artifactId>consolex</artifactId>
+      <version>2010-02-03</version>
+      <type>js</type>
+    </dependency>
+
+    <!-- Jasmine Tests dependencies -->
+    <!--dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency-->
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock.modules</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock.api</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-core</artifactId>
+      <version>1.4</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  
+  <repositories>
+    <repository>
+      <id>searls-maven-thirdparty</id>
+      <url>http://searls-maven-repository.googlecode.com/svn/trunk/thirdparty</url>
+    </repository>
+    <repository>
+      <id>powermock-repo</id>
+      <url>http://powermock.googlecode.com/svn/repo/</url>
+    </repository>
+  </repositories>
 
 </project>
