Add new lifecycle and goals to build Titanium Appcelerator™ mobile application for Android and iOS
 - new packaging type 'titanium'
 - new titanium-compile, prepare-titanium-jasmine-tests, titanium-jasmine,
   titanium-prepare-package and titanium-package goals
 - new documentation hosted on javascript-maven.softec.lu site
 - bump version to 1.1-softec

Javascript support is now well tested and Titanium support is in beta stage
for mobile sdk version 1.7.2 and 1.8.0.

--- a/javascript-compressor/javascript-compressor-api/pom.xml
+++ b/javascript-compressor/javascript-compressor-api/pom.xml
@@ -30,14 +30,15 @@
   <parent>
     <groupId>org.codehaus.mojo.javascript</groupId>
     <artifactId>javascript-compressor</artifactId>
-    <version>1.0-softec</version>
+    <version>1.1-softec</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>javascript-compressor-api</artifactId>
   <packaging>jar</packaging>
   <name>Javascript compressor API</name>
-  <url>http://mojo.codehaus.org/javascript-maven-tools/javascript-compressor/javascript-compressor-api/</url>
+  <description>JavaScript compressor common API for Maven</description>
+  <url>http://javascript-maven.softec.lu/javascript-compressor/javascript-compressor-api/</url>
 
   <build>
     <defaultGoal>install</defaultGoal>
