--- a/javascript-compressor/pom.xml
+++ b/javascript-compressor/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.codehaus.mojo.javascript</groupId>
     <artifactId>javascript-maven-tools</artifactId>
-    <version>1.0-softec</version>
+    <version>1.1-softec</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -38,7 +38,8 @@
   <artifactId>javascript-compressor</artifactId>
   <packaging>pom</packaging>
   <name>Javascript compressor</name>
-  <url>http://mojo.codehaus.org/javascript-maven-tools/javascript-compressor/</url>
+  <description>An uniform interface to integrate different JavaScript compressors in Maven</description>
+  <url>http://javascript-maven.softec.lu/javascript-compressor/</url>
 
   <modules>
   <module>javascript-compressor-api</module>
