--- a/javascript-compressor/shrinksafe-compressor/pom.xml
+++ b/javascript-compressor/shrinksafe-compressor/pom.xml
@@ -30,16 +30,15 @@
   <parent>
     <groupId>org.codehaus.mojo.javascript</groupId>
     <artifactId>javascript-compressor</artifactId>
-    <version>1.0-softec</version>
+    <version>1.1-softec</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>shrinksafe-compressor</artifactId>
   <packaging>jar</packaging>
   <name>Dojo Shrinksafe compressor</name>
-  <url>
-    http://mojo.codehaus.org/javascript-maven-tools/javascript-compressor/shrinksafe-compressor/
-  </url>
+  <description>Dojo Shrinksafe compressor for Maven</description>
+  <url>http://javascript-maven.softec.lu/javascript-compressor/shrinksafe-compressor/</url>
 
   <build>
     <defaultGoal>install</defaultGoal>
