--- a/javascript-maven-archive/pom.xml
+++ b/javascript-maven-archive/pom.xml
@@ -30,20 +30,22 @@
   <parent>
     <groupId>org.codehaus.mojo.javascript</groupId>
     <artifactId>javascript-maven-tools</artifactId>
-    <version>1.0-softec</version>
+    <version>1.1-softec</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.javascript</groupId>
   <artifactId>javascript-maven-archive</artifactId>
   <name>Javascript archive support for Maven</name>
-  <url>http://mojo.codehaus.org/javascript-maven-plugin/javascript-maven-archive/</url>
+  <description>An archiver to produce Javascript archive to be stored in a Maven repository for easy dependency management</description>
+  <url>http://javascript-maven.softec.lu/javascript-maven-archive/</url>
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-maven-plugin</artifactId>
+        <version>1.3.8</version>
         <executions>
           <execution>
             <goals>
