--- a/javascript-report-maven-plugin/pom.xml
+++ b/javascript-report-maven-plugin/pom.xml
@@ -30,20 +30,22 @@
   <parent>
     <groupId>org.codehaus.mojo.javascript</groupId>
     <artifactId>javascript-maven-tools</artifactId>
-    <version>1.0-softec</version>
+    <version>1.1-softec</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>javascript-report-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>Javascript Maven Report Plugin</name>
-  <url>http://mojo.codehaus.org/javascript-maven-tools/javascript-report-maven-plugin/</url>
+  <description>JSdoc and JSlint integration for Maven</description>
+  <url>http://javascript-maven.softec.lu/javascript-report-maven-plugin/</url>
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-maven-plugin</artifactId>
+        <version>1.3.8</version>
         <executions>
           <execution>
             <goals>
@@ -76,6 +78,9 @@
               <pomIncludes>
                 <pomInclude>*/pom.xml</pomInclude>
               </pomIncludes>
+              <pomExcludes>
+                <pomExclude>jsdoc/pom.xml</pomExclude>
+              </pomExcludes>
               <postBuildHookScript>verify</postBuildHookScript>
               <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
               <goals>
